--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "programming-iii",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
